part4/4_05/manifests/deployment-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-svc-dep
  namespace: project-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-svc
  template:
    metadata:
      labels:
        app: project-svc
    spec:
      containers:
        - name: service-container
          image: BACKEND_IMAGE
          imagePullPolicy: Always
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 10
            successThreshold: 1
            httpGet:
              path: /healthz
              port: 3001
